--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/julioarhernandez/spartanprot/issues"
   },
   "homepage": "https://github.com/julioarhernandez/spartanprot#readme",
-  "dependencies": {
+  "devDependencies": {
+    "gulp-inject-partials": "^1.0.5",
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0"
   }
